--- a/p8105_hw2_xy2719.md
+++ b/p8105_hw2_xy2719.md
@@ -1,21 +1,18 @@
----
-title: "p8101_hw2_xy2719"
-author: "Yao"
-date: "2025-10-02"
-output: github_document
----
+p8101_hw2_xy2719
+================
+Yao
+2025-10-02
 
 ## Problem 1
 
-```{r message=FALSE}
+``` r
 # Load library
 library(tidyverse)
 ```
 
 ### Clean data in pols-month.csv
 
-```{r message=FALSE}
-
+``` r
 pols_df = 
   read_csv("fivethirtyeight_datasets/pols-month.csv") |>
   separate(mon, into = c("year","month","day"), sep = "-") |>
@@ -33,8 +30,7 @@ view(pols_df)
 
 ### Clean data in snp.csv
 
-```{r message=FALSE}
-
+``` r
 snp_df = 
   read_csv("fivethirtyeight_datasets/snp.csv") |>
   separate(date, into = c("month","day","year"), sep = "/") |>
@@ -52,13 +48,11 @@ snp_df =
 
 
 view(snp_df)
-
 ```
 
 ### Clean data in unemployment.csv
 
-```{r message=FALSE}
-
+``` r
 unemploy_df = 
   read_csv("fivethirtyeight_datasets/unemployment.csv", na = c("NA", ".", "")) |>
   janitor::clean_names() |>
@@ -76,7 +70,7 @@ view(unemploy_df)
 
 ### Join the three datasets
 
-```{r}
+``` r
 # Join the datasets by merging snp into pols
 snp_pols_df = 
   left_join(pols_df, snp_df, by = c("year", "month"))
@@ -90,20 +84,29 @@ view(snp_pols_unemploy_df)
 
 ### Description:
 
-Dataset pols-month.csv shows monthly U.S. political composition. It contains counts of officeholders by party and the sitting president’s party. Dataset snp.csv shows S&P 500 market data. It contains the index closing value recorded by date. Dataset unemployment.csv shows U.S. monthly unemployment rate. The resulting dataset contains 822 rows and 11 columns, with one row for each year-month combination. It spans monthly data from 1947s to 2015s. The key variables are year and month. It also includes party counts for officeholders (gov_gop, sen_gop, rep_gop, gov_dem, sen_dem, and rep_dem), party of president (president), close, and unemployment.
+Dataset pols-month.csv shows monthly U.S. political composition. It
+contains counts of officeholders by party and the sitting president’s
+party. Dataset snp.csv shows S&P 500 market data. It contains the index
+closing value recorded by date. Dataset unemployment.csv shows U.S.
+monthly unemployment rate. The resulting dataset contains 822 rows and
+11 columns, with one row for each year-month combination. It spans
+monthly data from 1947s to 2015s. The key variables are year and month.
+It also includes party counts for officeholders (gov_gop, sen_gop,
+rep_gop, gov_dem, sen_dem, and rep_dem), party of president (president),
+close, and unemployment.
 
 ## Problem 2
 
-```{r message=FALSE}
+``` r
 # Load library
 library(readxl)
 library(janitor)
 library(tidyr)
 ```
 
-### Read and clean the Mr. Trash Wheel sheet
+### Read and clean the Mr. Trash Wheel sheet
 
-```{r message=FALSE}
+``` r
 m_trash_df = 
   read_excel("202509 Trash Wheel Collection Data.xlsx", 
              na = c("NA", ".", ""), 
@@ -121,7 +124,7 @@ view(m_trash_df)
 
 ### Read and clean Professor Trash Wheel sheet
 
-```{r}
+``` r
 p_trash_df = 
   read_excel("202509 Trash Wheel Collection Data.xlsx", 
              na = c("NA", ".", ""), 
@@ -136,7 +139,7 @@ view(p_trash_df)
 
 ### Read and clean Gwynnda sheet
 
-```{r}
+``` r
 gwynnda_df = 
   read_excel("202509 Trash Wheel Collection Data.xlsx", 
              na = c("NA", ".", ""), 
@@ -148,9 +151,9 @@ gwynnda_df =
 view(gwynnda_df)
 ```
 
-### Combine Professor Trash Wheel and Gwynnda to Mr. Trash Wheel dataset
+### Combine Professor Trash Wheel and Gwynnda to Mr. Trash Wheel dataset
 
-```{r}
+``` r
 # Add an additional variable to each dataset
 m_trash_df = m_trash_df |> 
   mutate(wheel = "Mr. Trash Wheel")
@@ -169,7 +172,7 @@ view(trash_all)
 
 ### Calculate the total number of cigarette butts collected by Gwynnda in June of 2022
 
-```{r}
+``` r
 gwynnda_cigs_june_2022 = 
   trash_all |>
   filter(wheel == "Gwynns Falls Trash Wheel") |>
@@ -179,15 +182,26 @@ gwynnda_cigs_june_2022 =
 gwynnda_cigs_june_2022
 ```
 
+    ## # A tibble: 1 × 1
+    ##   total_cigarette_butts
+    ##                   <dbl>
+    ## 1                 18120
+
 ### Description:
 
-The combined dataset contains 1188 observations and 15 columns of dumpster-level collections. Key variables include dumpster, month/year/date, weight (tons), volume (cubic yards), and item counts like cigarette butts, plastic bottles, wrappers, and sports balls. From the available data, Professor Trash Wheel collected a total of 282.26 tons of trash. For Gwynns Falls Trash Wheel in June 2022, the total number of cigarette butts collected was 18,120.
+The combined dataset contains 1188 observations and 15 columns of
+dumpster-level collections. Key variables include dumpster,
+month/year/date, weight (tons), volume (cubic yards), and item counts
+like cigarette butts, plastic bottles, wrappers, and sports balls. From
+the available data, Professor Trash Wheel collected a total of 282.26
+tons of trash. For Gwynns Falls Trash Wheel in June 2022, the total
+number of cigarette butts collected was 18,120.
 
 ## Problem 3
 
-### Read and clean "Zip Codes.csv"
+### Read and clean “Zip Codes.csv”
 
-```{r message=FALSE}
+``` r
 zip_codes_df =
   read_csv("zillow_data/Zip Codes.csv", na = c("NA", ".", "")) |>
   janitor::clean_names()
@@ -196,9 +210,9 @@ zip_codes_df =
 view(zip_codes_df)
 ```
 
-### Read and clean "Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv"
+### Read and clean “Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv”
 
-```{r message=FALSE}
+``` r
 zori_df =
   read_csv("zillow_data/Zip_zori_uc_sfrcondomfr_sm_month_NYC.csv") |>
   janitor::clean_names() |>
@@ -218,7 +232,7 @@ view(zori_df)
 
 ### Merge zori_df with zip_codes_df
 
-```{r}
+``` r
 all_zori_df =
   left_join(zip_codes_df, zori_df, by = c("zip_code", "county"), relationship = "many-to-many") |>
   select(zip_code, county, neighborhood, date, zori, everything()) |>
@@ -229,7 +243,7 @@ view(all_zori_df)
 
 ### Check unique zipcodes and neighborhoods
 
-```{r}
+``` r
 # Number of unique ZIP codes
 n_unique_zips <-
   all_zori_df |>
@@ -241,31 +255,62 @@ n_unique_neighborhoods <-
     summarise(n_unique_neighborhoods = n_distinct((neighborhood)))
 
 n_unique_zips
+```
+
+    ## # A tibble: 1 × 1
+    ##   n_unique_zips
+    ##           <int>
+    ## 1           320
+
+``` r
 n_unique_neighborhoods
 ```
 
+    ## # A tibble: 1 × 1
+    ##   n_unique_neighborhoods
+    ##                    <int>
+    ## 1                     43
+
 ### Description:
 
-The resulting tidy dataset has total 17342 observations and 16 columns. There are 320 unique zip codes and 43 unique neighborhoods included.
+The resulting tidy dataset has total 17342 observations and 16 columns.
+There are 320 unique zip codes and 43 unique neighborhoods included.
 
 ### ZIP codes appear in the ZIP code dataset but not in the Zillow Rental Price dataset
 
-```{r}
+``` r
 zips_not_in_zori <-
   setdiff(zip_codes_df$zip_code, zori_df$zip_code)
 
 # Count and inspect a few examples
 length(zips_not_in_zori)
+```
+
+    ## [1] 171
+
+``` r
 head(zips_not_in_zori, 20)
 ```
 
+    ##  [1] 10464 10474 10475 10499 10550 10704 10705 10803 11202 11224 11239 11241
+    ## [13] 11242 11243 11245 11247 11251 11252 11256 10008
+
 ### Comment:
 
-The zip code dataset includes 320 ZIP codes, but only 149 ZIP codes have rental price data in Zillow Rental Price dataset. Therefore, 171 ZIP codes are present in the zip code dataset but absent from the Zillow Rental Price dataset. Examples include: 10020 (Rockefeller Center, Manhattan), 10041 (Wall Street P.O. boxes), 10101–10112 (special “unique” Manhattan ZIPs assigned to office buildings). Many zip codes are non-residential zip codes, including corporate mailrooms, government offices, and commercial skyscrapers. Some are P.O. box–only zips with no associated housing stock. Others have too little rental activity for Zillow to compute a stable rent index.
+The zip code dataset includes 320 ZIP codes, but only 149 ZIP codes have
+rental price data in Zillow Rental Price dataset. Therefore, 171 ZIP
+codes are present in the zip code dataset but absent from the Zillow
+Rental Price dataset. Examples include: 10020 (Rockefeller Center,
+Manhattan), 10041 (Wall Street P.O. boxes), 10101–10112 (special
+“unique” Manhattan ZIPs assigned to office buildings). Many zip codes
+are non-residential zip codes, including corporate mailrooms, government
+offices, and commercial skyscrapers. Some are P.O. box–only zips with no
+associated housing stock. Others have too little rental activity for
+Zillow to compute a stable rent index.
 
 ### Rental prices in January 2021 and January 2020
 
-```{r}
+``` r
 # Filter for Jan 2020
 zori_2020 <- all_zori_df |>
   filter(date == c("2020_01_31")) |>
@@ -294,12 +339,11 @@ zori_2020_2021 =
 
 
 view(zori_2020_2021)
-
 ```
 
 ### Compare and show the top 10 zipcode
 
-```{r}
+``` r
 # Compute change (2021 – 2020)
 zori_2020_2021 <- zori_2020_2021 |>
   mutate(change = zori_2021_01_31 - zori_2020_01_31) |>
@@ -316,6 +360,29 @@ top10_drops <- zori_2020_2021 |>
 top10_drops
 ```
 
+    ## # A tibble: 10 × 6
+    ##    zip_code county   neighborhood               zori_2020jan zori_2021jan change
+    ##       <dbl> <chr>    <chr>                             <dbl>        <dbl>  <dbl>
+    ##  1    10007 New York Lower Manhattan                   6334.        5422.  -913.
+    ##  2    10069 New York <NA>                              4623.        3875.  -748.
+    ##  3    10009 New York Lower East Side                   3406.        2692.  -714.
+    ##  4    10016 New York Gramercy Park and Murray …        3731.        3019.  -712.
+    ##  5    10001 New York Chelsea and Clinton               4108.        3398.  -710.
+    ##  6    10002 New York Lower East Side                   3645.        2935.  -710.
+    ##  7    10004 New York Lower Manhattan                   3150.        2444.  -706.
+    ##  8    10038 New York Lower Manhattan                   3573.        2876.  -698.
+    ##  9    10012 New York Greenwich Village and Soho        3629.        2942.  -686.
+    ## 10    10010 New York Gramercy Park and Murray …        3697.        3012.  -685.
+
 ### Comment:
 
-The top 10 ZIP codes with the largest rent decreases from January 2020 to January 2021 were all in New York County (Manhattan). The largest rental price declines was 913 dollars. Drops were around \$600–900 per month, concentrated in downtown, including Lower Manhattan, East Village, Chelsea, Gramercy, and Soho. This aligns with the sudden shift to remote work, reduced demand for city-center apartments, and an outflow of residents during the pandemic. Brooklyn, Queens, the Bronx, and Staten Island experienced smaller rent declines. These areas typically have lower baseline rents and more family-oriented housing, making them less sensitive to the downtown exodus.
+The top 10 ZIP codes with the largest rent decreases from January 2020
+to January 2021 were all in New York County (Manhattan). The largest
+rental price declines was 913 dollars. Drops were around \$600–900 per
+month, concentrated in downtown, including Lower Manhattan, East
+Village, Chelsea, Gramercy, and Soho. This aligns with the sudden shift
+to remote work, reduced demand for city-center apartments, and an
+outflow of residents during the pandemic. Brooklyn, Queens, the Bronx,
+and Staten Island experienced smaller rent declines. These areas
+typically have lower baseline rents and more family-oriented housing,
+making them less sensitive to the downtown exodus.
